[FEATURE] (auth): Forget password, reset password, change password
